--- a/nav2d_tutorials/param/operator.yaml
+++ b/nav2d_tutorials/param/operator.yaml
@@ -3,16 +3,21 @@ frequency: 10
 
 # Maximum velocity command the operator will send to the robot (in m/s)
 max_velocity: 1.0
+max_angular_velocity: 1.0 #rad/s
 
 # If set to true, the selected best direction is published as a GridCells-Message
 publish_route: true
 
 # The way is assumed to be free when there is no obstacle within this range (in meter)
-max_free_space: 3.0
-safety_decay: 0.99
+max_free_space: 0.5
+safety_decay: 0.95
 
 # The importance weights of the 3 action values
 safety_weight: 1
 escape_weight: 1
 conformance_weight: 1
 continue_weight: 1
+
+# robot par
+robot_width: 0.4
+robot_length: 0.56
