--- a/nav2d_tutorials/param/costmap.yaml
+++ b/nav2d_tutorials/param/costmap.yaml
@@ -25,8 +25,9 @@ min_obstacle_height: 0.0
 max_obstacle_height: 2.0
 raytrace_range: 4.5
 
-robot_radius: 0.2 # Width x 1 / 0.5
-inflation_radius: 0.4 # Width x 2 / 0.5
+# width = 0.55, length = 0.65
+robot_radius: 0.319 # sqrt((Width/2)^2 + (length/4)^2)
+inflation_radius: 0.55 # Width
 cost_scaling_factor: 2.0
 lethal_cost_threshold: 100
 observation_sources: scan
